# small-gemm-tutorial

./: Cargo.toml
benches/: bench.rs
src/: lib.rs
